* Fix header z-index

--- a/src/view/Components/Header/style.scss
+++ b/src/view/Components/Header/style.scss
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 200;
+  z-index: 2000;
 }
 
 .header__content {
